--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "homepage": "https://github.com/jermhern/find_a_pet#readme",
   "dependencies": {
     "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
     "fetch-jsonp": "^1.1.3"
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0"
   }
 }
